Likes in post(button only), fixed double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,7 @@ html{
 }
 body{
     padding: 0;
-    background: #004792;
     margin: 0;
     text-decoration: none;
-    overflow-x: hidden;
     font-family: "Poppins";
 }
